--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -18,7 +18,13 @@
                 {'name': 'Roles', 'endpoint': 'lecturer.users_roles', 'icon': 'ki-duotone ki-user-square'}
             ] %}
 
+            {% set programa_items = [
+                {'name': 'innosoft_day', 'endpoint': 'innosoft_day.all', 'icon': 'ki-duotone ki-user-edit'}
+                  
+            ] %}
+
             {{ menu_item('Usuarios', usuarios_items) }}
+            {{ menu_item('Programa', programa_items) }}
 
         {% endif %}
 
