feat: Voting list
Co-authored-by: Andrés Domínguez Ruiz <andresdominguezruiz@users.noreply.github.com>

--- a/app/innosoft_day/templates/innosoft_day/list.html
+++ b/app/innosoft_day/templates/innosoft_day/list.html
@@ -9,7 +9,9 @@
  
 
 {% set menu_actions = [
-    {"name": "proposal", "route": 'proposal.all'},
+    {"name": "Listar propuestas", "route": 'proposal.all'},{
+        "name":"Listar votaciones","route":"votation.all"
+    }
 ] %}
 
     {{ macros.render_table(columns, all_items, buttons, menu_actions) }}
