feat: Confirm proposal
Co-authored-by: Andrés Domínguez Ruiz <andresdominguezruiz@users.noreply.github.com>

--- a/app/proposal/templates/proposal/list.html
+++ b/app/proposal/templates/proposal/list.html
@@ -5,7 +5,7 @@
 {% block title %}proposal{% endblock %}
 
 {% block content %}
-{% set columns = ["subject","proposal_type","state","innosoft_day_id"] %}
+{% set columns = ["tema","tipo de propuesta","estado"] %}
 
 
 {% set menu_actions = [
