--- a/app/templates/logo.html
+++ b/app/templates/logo.html
@@ -1,5 +1,5 @@
 <!--begin::Logo-->
-<a  href="{{ url_for('dashboard.index') }}" class="d-flex align-items-center">
+<a  href="{{ url_for('innosoft_day.all') }}" class="d-flex align-items-center">
     <img alt="Logo" style="max-height: 25px" src="{{ url_for("static", filename="media/logos/default.svg") }}"/>
 </a>
 <!--end::Logo-->
