--- a/app/auth/templates/auth/login_form.html
+++ b/app/auth/templates/auth/login_form.html
@@ -88,7 +88,7 @@
                 <div class="card-body py-15 py-lg-20">
                     <!--begin::Logo-->
                     <div class="mb-7">
-                        <a href="{{ url_for('dashboard.index') }}">
+                        <a href="{{ url_for('innosoft_day.all') }}">
                             <img id="logoImage" alt="Logo" style="max-height: 50px"
                                  src="{{ url_for("static", filename="media/logos/default-light.svg") }}"/>
                         </a>
