--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -69,7 +69,7 @@ License: For each use you must have a valid license purchased only from above li
 							<!--end::Illustration-->
 							<!--begin::Link-->
 							<div class="mb-0">
-								<a href="{{url_for('dashboard.index')}}" class="btn btn-sm btn-primary">Volver al inicio</a>
+								<a href="{{url_for('innosoft_day.all')}}" class="btn btn-sm btn-primary">Volver al inicio</a>
 							</div>
 							<!--end::Link-->
 						</div>
