feat: General corrections and proposal stores user

--- a/app/proposal/templates/proposal/list.html
+++ b/app/proposal/templates/proposal/list.html
@@ -5,7 +5,7 @@
 {% block title %}proposal{% endblock %}
 
 {% block content %}
-{% set columns = ["tema","tipo de propuesta","estado"] %}
+{% set columns = ["tema","tipo de propuesta","estado","usuario"] %}
 
 
 {% set menu_actions = [
