--- a/app/votation/templates/votation/list.html
+++ b/app/votation/templates/votation/list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-{% set columns = ["Tema","descripcion","tipo de propuesta","estado de la votacion"] %}
+{% set columns = ["Tema","descripcion","tipo de propuesta","estado de la votacion","usuario"] %}
  
 
 
