--- a/app/proposal/templates/proposal/view.html
+++ b/app/proposal/templates/proposal/view.html
@@ -16,11 +16,12 @@
         <p><strong>Tipo:</strong> {{ proposal.proposal_type.value }}</p>
         <p><strong>Estado:</strong> {{ proposal.state.value }}</p>
         <p><strong>Descripción:</strong> {{ proposal.description }}</p>
+        <p><strong>Usuario:</strong> {{ username }}</p>
        
     </div>
     <div>
         <h2>Acciones disponibles</h2>
-        {% if proposal.state.name=='PENDING_OF_ACEPTATION' %}
+        {% if proposal.state.name=='PENDING_OF_ADMISION' %}
         
         <a href="{{ url_for('proposal.accept',id=proposal.id, innosoft_day_id=proposal.innosoft_day_id) }}" class="btn btn-success">ACEPTAR</a>
         <a href="{{ url_for('proposal.reject',id=proposal.id,innosoft_day_id=proposal.innosoft_day_id) }}" class="btn btn-danger">RECHAZAR</a>
