--- a/app/proposal/templates/proposal/list.html
+++ b/app/proposal/templates/proposal/list.html
@@ -12,18 +12,24 @@
     {"name": "proposal", "route": 'proposal.all'},
 ] %}
 
-<select >
+<a class="btn btn-success" href="{{ url_for('proposal.create',innosoft_day_id=innosoft_day_id) }}" >CREAR PROPUESTA</a>
+<b>TOKENS: {{current_user.token}}</b>
+<a class="btn btn-success" href="{{ url_for('token_request.create') }}" >SOLICITAR MAS TOKENS</a>
+<div class="row">
 
-    <option href="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='PENDING_OF_ADMISION') }}" >PENDIENTE DE ADMISIÓN</option>
-    <option href="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='PENDING_OF_ACEPTATION') }}" >PENDIENTE DE ACEPTACIÓN</option>
-    <option href="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='ON_PREPARATION') }}" >EN PREPARACIÓN</option>
-    <option href="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id,state='CONFIRMATED') }}" >CONFIRMADO</option>
-    <option href="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='REJECTED') }}" >RECHAZADO</option>
-    <option href="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='CLOSED') }}" >CERRADO</option>
-    <option href="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='CLOSED') }}" >TOKENS: {{current_user.token}}</option>
-    <option href="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='CLOSED') }}" >SOLICITAR TOKEN</option>
-</select>
+    <b>Filtrado: </b>
+    <select class="form-select" style="width: 30%;" onchange="window.location.href=this.value" >
+        
+        <option value="{{ url_for('proposal.all', id=innosoft_day_id) }}" {% if state == None %}selected{% endif %}>Todas</option>
+        <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='PENDING_OF_ADMISION') }}" {% if state == 'PENDING_OF_ADMISION' %}selected{% endif %}>Pendiente de admisión</option>
+        <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='PENDING_OF_ACEPTATION') }}" {% if state == 'PENDING_OF_ACEPTATION' %}selected{% endif %}>Pendiente de aceptación</option>
+        <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='ON_PREPARATION') }}" {% if state == 'ON_PREPARATION' %}selected{% endif %}>En preparación</option>
+    <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id,state='CONFIRMATED') }}" {% if state == 'CONFIRMATED' %}selected{% endif %}>Confirmada</option>
+    <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='REJECTED') }}" {% if state == 'REJECTED' %}selected{% endif %}>Rechazada</option>
+    <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='CLOSED') }}" {% if state == 'CLOSED' %}selected{% endif %}>Cerrada</option>
     
+</select>
+</div>
 
 
     {{ macros.render_table(columns, all_items, buttons, menu_actions) }}
