fix: proposals filter refactor

--- a/app/proposal/templates/proposal/list.html
+++ b/app/proposal/templates/proposal/list.html
@@ -21,12 +21,12 @@
     <select class="form-select" style="width: 30%;" onchange="window.location.href=this.value" >
         
         <option value="{{ url_for('proposal.all', id=innosoft_day_id) }}" {% if state == None %}selected{% endif %}>Todas</option>
-        <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='PENDING_OF_ADMISION') }}" {% if state == 'PENDING_OF_ADMISION' %}selected{% endif %}>Pendiente de admisión</option>
-        <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='PENDING_OF_ACEPTATION') }}" {% if state == 'PENDING_OF_ACEPTATION' %}selected{% endif %}>Pendiente de aceptación</option>
-        <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='ON_PREPARATION') }}" {% if state == 'ON_PREPARATION' %}selected{% endif %}>En preparación</option>
-    <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id,state='CONFIRMATED') }}" {% if state == 'CONFIRMATED' %}selected{% endif %}>Confirmada</option>
-    <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='REJECTED') }}" {% if state == 'REJECTED' %}selected{% endif %}>Rechazada</option>
-    <option value="{{ url_for('proposal.proposal_filter_by_state', id=innosoft_day_id, state='CLOSED') }}" {% if state == 'CLOSED' %}selected{% endif %}>Cerrada</option>
+        <option value="{{ url_for('proposal.all', id=innosoft_day_id, state='PENDING_OF_ADMISION') }}" {% if state == 'PENDING_OF_ADMISION' %}selected{% endif %}>Pendiente de admisión</option>
+        <option value="{{ url_for('proposal.all', id=innosoft_day_id, state='PENDING_OF_ACEPTATION') }}" {% if state == 'PENDING_OF_ACEPTATION' %}selected{% endif %}>Pendiente de aceptación</option>
+        <option value="{{ url_for('proposal.all', id=innosoft_day_id, state='ON_PREPARATION') }}" {% if state == 'ON_PREPARATION' %}selected{% endif %}>En preparación</option>
+    <option value="{{ url_for('proposal.all', id=innosoft_day_id,state='CONFIRMATED') }}" {% if state == 'CONFIRMATED' %}selected{% endif %}>Confirmada</option>
+    <option value="{{ url_for('proposal.all', id=innosoft_day_id, state='REJECTED') }}" {% if state == 'REJECTED' %}selected{% endif %}>Rechazada</option>
+    <option value="{{ url_for('proposal.all', id=innosoft_day_id, state='CLOSED') }}" {% if state == 'CLOSED' %}selected{% endif %}>Cerrada</option>
     
 </select>
 </div>
