--- a/app/proposal/templates/proposal/create.html
+++ b/app/proposal/templates/proposal/create.html
@@ -1,7 +1,96 @@
 {% extends "base_template.html" %}
 
-{% block title %}proposal{% endblock %}
-
+{% block title %}View dataset{% endblock %}
 {% block content %}
-Aqui se crea una proupesta para la jornada con id {{proposal.innosoft_day_id}}
+<style>
+        .textarea {
+      width: 200%;
+    }
+    #num_token{
+        width: 70%;
+    }
+
+    /* * {
+        border: 0.2px solid red;
+    } */
+
+</style>
+
+    <h1 class="h3 mb-3">Solicitud de Propuesta</h1>
+
+
+
+    <div class="row">
+
+        <div class="col-12 col-lg-6">
+
+            <form method="POST" action="{{ url_for('proposal.create',id=innosoft_day_id ) }}" class="needs-validation" novalidate>
+                {{ form.hidden_tag() }}
+                
+                
+
+
+                     <div class="col-10 textarea">
+                        {{ form.subject.label(class="form-label") }}
+                        {% set subject_value = form.subject.data if form.description.data else current_user.profile.subject %}
+                        {{ form.subject(class="form-control", placeholder="Tema principal de la propuesta", required=true, value=description_value) }}
+                        {% for error in form.description.errors %}
+                            <span style="color: red;">{{ error }}</span>
+                            <br>
+                        {% endfor %}
+                    </div>
+                    <div class="col-20 textarea">
+                        {{ form.description.label(class="form-label") }}
+                        {% set description_value = form.description.data if form.description.data else current_user.profile.description %}
+                        {{ form.description(class="form-control", placeholder="Enter your description", required=true, value=description_value) }}
+                        {% for error in form.description.errors %}
+                            <span style="color: red;">{{ error }}</span>
+                            <br>
+                        {% endfor %}
+                    </div>
+                    <br>
+                    <label for="proposal_type">Selecciona un tipo de propuesta:</label>
+                    
+                       
+                    <div class="col-6">
+
+                        {{ form.proposal_type.label(class="form-label")}}
+                        {{form.proposal_type()}}
+                        
+                    </div>
+                   
+
+                
+
+                <div class="row form-group">
+
+                    <div class="col-12 mt-3">
+                        {{ form.submit(class="btn btn-primary") }}
+                    </div>
+
+
+                </div>
+            </form>
+
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-lg-6 col-12">
+
+                {% if error %}
+
+                    <div class="mt-3">
+                        <p style="color: red;"><strong>Error:</strong> {{ error }}
+                    </div>
+
+                {% endif %}
+
+            </div>
+
+        </div>
+
+    </div>
+
 {% endblock %}
