feat: selenium tests

--- a/app/proposal/templates/proposal/list.html
+++ b/app/proposal/templates/proposal/list.html
@@ -13,7 +13,7 @@
 ] %}
 
 <a class="btn btn-success" href="{{ url_for('proposal.create',id=innosoft_day_id) }}" >CREAR PROPUESTA</a>
-<b>TOKENS: {{current_user.token}}</b>
+<b>TOKENS: <span id="token_count" >{{current_user.token}}</span></b>
 <a class="btn btn-success" href="{{ url_for('token_request.create') }}" >SOLICITAR MAS TOKENS</a>
 <div class="row">
 
