fix: cambio en el titulo de login

--- a/app/auth/templates/auth/login_form.html
+++ b/app/auth/templates/auth/login_form.html
@@ -116,7 +116,7 @@
                             <h1 class="text-dark fw-bolder mb-3">Log in</h1>
                             <!--end::Title-->
                             <!--begin::Subtitle-->
-                            <div class="text-gray-500 fw-semibold fs-6">¡Evidencia ahora todo tu trabajo!</div>
+                            <div class="text-gray-500 fw-semibold fs-6">¡Evidencia ahora todo tu trabajo en las jornadas!</div>
                             <!--end::Subtitle=-->
                         </div>
                         <!--begin::Heading-->
